[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "gzcmd-record-linkage"
dynamic = ["version"]
description = "Deterministic policy engine for clerical review linkage decision support"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "OpenCode" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "PyYAML>=6.0",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "joblib>=1.3",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pyright>=1.1",
]

[project.scripts]
gzcmd = "gzcmd_record_linkage.cli:main"
gzcmd_record_linkage = "gzcmd_record_linkage.cli:main"
gzcmd_record_linkage_cli = "gzcmd_record_linkage.cli:main"

[project.urls]
Homepage = "https://github.com/"
Source = "https://github.com/"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/gzcmd_record_linkage"]
include = [
  "src/gzcmd_record_linkage/gzcmd_v3_config.yaml",
  "src/gzcmd_record_linkage/gzcmd_v3_llm_prompt.md",
  "src/gzcmd_record_linkage/gzcmd_v3_llm_output.schema.json",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/gzcmd_record_linkage/**",
  "README.md",
  "requirements/**",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["gzcmd_record_linkage"]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 0
